Update project to use MapR 5.2 libraries

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <artifactId>mapr-streams-examples</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <mapr-db-version>5.2.0-mapr</mapr-db-version>
+        <mapr-streams-version>0.9.0.0-mapr-1607</mapr-streams-version>
+    </properties>
+
+
     <repositories>
         <repository>
             <id>mapr-maven</id>
@@ -21,14 +27,14 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>0.9.0.0-mapr-1602</version>
+            <version>${mapr-streams-version}</version>
             <scope>provided</scope>
         </dependency>
         <!-- Adding MapR DB Dependency for the DBConsumer application    -->
         <dependency>
             <groupId>com.mapr.db</groupId>
             <artifactId>maprdb</artifactId>
-            <version>5.1.0-mapr</version>
+            <version>${mapr-db-version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
